_sass/main.scss
/* Global Styles */
body {
    font-family: 'Lato', sans-serif;
    font-size: 1.25em;
    margin: 0;
    padding: 0;
    background-color: #121212;
    color: #fff;
}

a {
    color: inherit;
    text-decoration: none;
}

h1, h2, h3 {
    margin: 0 0 1em 0;
    padding: 0;
    font-weight: 700;
    font-size: 3em;
}

/* Navigation Bar */
nav {
    position: sticky;
    top: 0;
    background-color: #1c1c1c;
    padding: 20px;
    text-align: center;
    z-index: 100;
    width: 100%;
    box-sizing: border-box;
}

nav a {
    margin: 0 20px;
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #ccc;
    transition: color 0.1s ease;
}

nav a:hover {
    color: #fff;
}

/* Main Section Styles */
.section {
    width: 100%;
    padding: 80px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
}

.section .content {
    max-width: 900px;
    width: 100%;
    padding: 0 20px;
    box-sizing: border-box;
}

/* About Section */
.about {
    background-color: #000;
    color: #fff;
}

/* Releases Section */
.releases {
    background-color: #fff;
    color: #000;
}

/* Music Grid */
.music-grid {
    // display: grid;
    // grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 20px;
}

.music-item {
    position: relative;
    background-color: #fff;
    border-radius: 8px;
    cursor: pointer hand;
    transition: transform 0.3s ease;
    border: none;  /* Ensure no outline */
}

.music-item:hover {
    transform: scale(1.05);
}

.music-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 8px;
}

.music-item .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity 0.1s ease;
    border-radius: 8px;
    font-size: 20px;
    color: #ff4081;
    letter-spacing: 2px;
}

.music-item:hover .overlay {
    opacity: 1;
}

/* Contact Section */
.contact a {
    color: #ff4081;
    font-size: 16px;
    text-decoration: none;
}

/* Footer */
footer {
    padding: 20px;
    text-align: center;
    background-color: #000;
    color: #888;
}

